# awesome-generative-ai

./: main.py  pyproject.toml
.github/workflows/: main.yaml
