[tool.poetry]
name = "awesome-generative-ai"
version = "0.1.0"
description = ""
authors = ["Travis Boudreaux <tjboudreaux@gmail.com>"]
readme = "README.md"
packages = [{include = "awesome_generative_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
tweepy = "^4.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
